# clay

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
clay/: Cargo.toml
clay-core/: .gitignore  Cargo.toml  README.md  build.rs  kernel.c
clay-core/examples/: gui.rs  paste.rs  window.rs
clay-core/ocl-src/: draw.c  linalg.h  main.c  matrix.h  random.h  ray.h  render.c  scene.h  view.h
clay-core/ocl-src/attract/: attractor.h  sphere_attractor.h
clay-core/ocl-src/map/: affine.h  chain.h  linear.h  map.h  scale.h  shift.h
clay-core/ocl-src/material/: colored.h  diffuse.h  luminous.h  material.h  mirror.h  reflective.h
clay-core/ocl-src/object/: mapper.h  object.h  sphere.h
clay-core/ocl-src/scene/: list_scene.h
clay-core/ocl-src/shape/: attractor.h  cube.h  mapper.h  shape.h  sphere.h  target.h
clay-core/ocl-src/view/: proj_view.h
clay-core/ocl_src/: main.c
clay-core/src/: background.rs  callable.rs  class.rs  context.rs  error.rs  lib.rs  ocl_src.rs  pack.rs  push.rs  ray.rs  result.rs  scene.rs  select.rs  source.rs  type_hash.rs  worker.rs
clay-core/src/attract/: mod.rs  sphere_attractor.rs
clay-core/src/buffer/: instance_buffer.rs  mod.rs  object_buffer.rs  ray_buffer.rs  screen.rs
clay-core/src/geometry/: bound.rs  geometry.rs  mod.rs  sphere.rs
clay-core/src/map/: affine.rs  chain.rs  linear.rs  map.rs  mapper.rs  mod.rs  scale.rs  shift.rs
clay-core/src/material/: colored.rs  combine.rs  diffuse.rs  luminous.rs  material.rs  mirror.rs  mod.rs  reflective.rs  select.rs  test.rs
clay-core/src/object/: combine.rs  cover.rs  covered.rs  mapper.rs  mod.rs  object.rs  object_union.rs  select.rs  sphere.rs  union_object.rs
clay-core/src/scene/: list_scene.rs  mod.rs  scene.rs
clay-core/src/shape/: attractor.rs  bound.rs  cube.rs  mapper.rs  mod.rs  select.rs  shape.rs  sphere.rs  target.rs  test.rs
clay-core/src/view/: mod.rs  proj_view.rs  view.rs
clay-core/src/worker/: args.rs  kernel.rs  mod.rs  program.rs  worker.rs
clay/examples/: 01_diffuse_spheres.rs  window.rs
clay/ocl-src/background/: constant_background.h  gradient_background.h
clay/ocl-src/scene/: list_scene.h
clay/ocl-src/shape/: cube.h
clay/ocl-src/view/: proj_view.h
clay/src/: lib.rs
clay/src/background/: mod.rs
clay/src/map/: linear.rs  mod.rs  shift.rs
clay/src/material/: diffuse.rs  mod.rs  reflective.rs
clay/src/scene/: list_scene.rs  mod.rs
clay/src/shape/: ellipsoid.rs  unit_cube.rs  unit_sphere.rs
clay/src/view/: mod.rs
examples/: 00_ocl_info.rs  01_1_spheres.rs  01_2_motion.rs  01_diffuse_spheres.rs  02_shapes.rs  02_spheres_and_motion.rs  03_materials.rs  03_shape_select.rs  04_1_light_source.rs  04_2_multiple_sources.rs  04_light_source.rs  04_materials.rs  05_indirect_lighting.rs  05_light_source.rs  05_materials.rs  06_indirect_lighting.rs  98_rocks.rs  99_advanced.rs
ocl-src/background/: gradient_background.h
ocl-src/filter/: glare.h  identity.h  log.h
ocl-src/map/: linear.h  scale.h  shift.h
ocl-src/material/: diffuse.h  luminous.h  reflective.h
ocl-src/scene/: list_scene.h  target_list_scene.h
ocl-src/view/: proj_view.h
src/: lib.rs  source.rs  worker.rs
src/background/: constant_background.rs  gradient_background.rs
src/filter/: glare.rs  identity.rs  log.rs  mod.rs
src/map/: affine.rs  linear.rs  mod.rs  scale.rs  shift.rs
src/material/: diffuse.rs  luminous.rs  mod.rs  reflective.rs
src/process/: mod.rs  postproc.rs  render.rs
src/scene/: list_scene.rs  mod.rs  target_list_scene.rs
src/scene/background/: constant.rs  gradient.rs  mod.rs
src/shape/: ellipsoid.rs  mod.rs  parallelepiped.rs  sphere.rs  unit_cube.rs  unit_sphere.rs
src/view/: mod.rs  point.rs  proj_view.rs  projection.rs
