[package]
name = "clay"
version = "0.0.2"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "OpenCL ray tracer"
homepage = "https://github.com/clay-rs/clay"
repository = "https://github.com/clay-rs/clay"

keywords = ["ray-tracing", "opencl"]
categories = ["graphics", "rendering", "multimedia"]

readme = "README.md"
build = "build.rs"

[dependencies]
ocl = "0.19"
ocl-include = "0.3.3"
nalgebra = "0.18"
rand = "0.7"
lazy_static = "1.3.0"
regex = "1"
uuid = { version = "0.7", features = ["v4"] }

clay-core = { git = "https://github.com/clay-rs/clay-core.git", rev = "c64517447f2a7e33f0744e8d7352bc398f0cf580" }
#clay-core = { path = "../clay-core" }

[build-dependencies]
walkdir = "2"

[dev-dependencies]
clay-viewer = { git = "https://github.com/clay-rs/clay-viewer.git", rev = "f97a551770065de7f752d023e06f82d929f856ff" }
#clay-viewer = { path = "../clay-viewer" }

clay-utils = { git = "https://github.com/clay-rs/clay-utils.git", rev = "b6b5c266f79829ee1400d9c0c16349c72faa2ffc" }
#clay-utils = { path = "../clay-utils" }
