[package]
name = "clay"
version = "0.0.2"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "OpenCL ray tracer"
homepage = "https://github.com/clay-rs/clay"
repository = "https://github.com/clay-rs/clay"

keywords = ["ray-tracing", "opencl"]
categories = ["graphics", "rendering", "multimedia"]

readme = "README.md"
build = "build.rs"

[dependencies]
ocl = "0.19"
ocl-include = "0.3.3"
nalgebra = "0.18"
rand = "0.7"
lazy_static = "1.3.0"
regex = "1"
uuid = { version = "0.7", features = ["v4"] }

clay-core = { git = "https://github.com/clay-rs/clay-core.git", rev = "c6e3ce379d6a883917bd2f26d48336c2d679e8de" }
#clay-core = { path = "../clay-core" }

[build-dependencies]
walkdir = "2"

[dev-dependencies]
clay-viewer = { git = "https://github.com/clay-rs/clay-viewer.git", rev = "e7f544568f172a50846b006cf1058e9a8b63166e" }
#clay-viewer = { path = "../clay-viewer" }

clay-utils = { git = "https://github.com/clay-rs/clay-utils.git", rev = "76434333dfd33057fbc39b51fe6aa00c6e04573f" }
#clay-utils = { path = "../clay-utils" }
