[package]
name = "clay-core"
version = "0.0.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Core functionality for OpenCL ray/path tracer"
homepage = "https://github.com/nthend/clay"
repository = "https://github.com/nthend/clay"
readme = "README.md"

keywords = ["ray-tracing", "path-tracing", "opencl"]
categories = ["graphics", "rendering", "multimedia"]

[dependencies]
