[package]
name = "clay-core"
version = "0.0.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Core functionality for Clay - an OpenCL ray/path tracer"
homepage = "https://github.com/nthend/clay"
repository = "https://github.com/nthend/clay"

keywords = ["ray-tracing", "path-tracing", "opencl"]
categories = ["graphics", "rendering", "multimedia"]

readme = "README.md"
build = "build.rs"

[dependencies]
ocl = "0.19"
ocl-include = "0.3.3"
nalgebra = "0.18"
rand = "0.7"
lazy_static = "1.3.0"
regex = "1"

[build-dependencies]
walkdir = "2"

[dev-dependencies]
clay-gui = { path = "../clay-gui" }
